[project]
name = "gofiledownloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Requests==2.32.3",
    "rich==13.9.4"
]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["downloader"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
gofiledownloader = "downloader:main"
